refactor: 불변 리스트를 반환하기 위해 Stream.collect(Collectors.toList())를 Stream.toList()로 변경